Cleanup TaskSchedulerWorkerPoolHistogramTest.NumTasks*Cleanup tests.

TaskSchedulerWorkerPoolHistogramTest.NumTasksBeforeCleanup still depends
on cleanup timing, I'll try to remove those dependencies in a follow-up.

R=fdoray@chromium.org, robliao@chromium.org

Bug: 816170
Change-Id: I2cca331d18ee8f3ca384493bd3584c68240c445e
Reviewed-on: https://chromium-review.googlesource.com/936626
Commit-Queue: Gabriel Charette <gab@chromium.org>
Reviewed-by: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539789}
Former-commit-id: ee000a69dbe1884d15f87ce6565036825158fba8